--- a/smith-family.html
+++ b/smith-family.html
@@ -200,7 +200,7 @@
     </div>
 
     <!-- Header -->
-    <header id="mainHeader" class="flex items-center justify-between py-0 border-b border-gray-200 bg-white sticky top-0 z-10 px-4 sm:px-6 lg:px-8">
+    <header id="mainHeader" class="flex items-center justify-between py-0 bg-white sticky top-0 z-10 px-4 sm:px-6 lg:px-8">
         <div class="flex items-center space-x-4 max-w-4xl mx-auto w-full">
             <button class="text-gray-600 focus:outline-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -212,8 +212,8 @@
         </div>
     </header>
 
-    <!-- Line below header -->
-    <div class="max-w-4xl mx-auto border-b border-gray-200 mb-2 px-4 sm:px-6 lg:px-8"></div>
+    <!-- Garis di bawah header -->
+    <div class="max-w-4xl mx-auto border-b border-gray-200"></div>
 
     <main class="max-w-4xl mx-auto p-4 sm:p-6 lg:p-8">
         <article>
@@ -223,7 +223,7 @@
                 <svg class="w-3 h-3 mx-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
                 </svg>
-                <span>INDONESIA</span>
+                <span>AMERIKA SERIKAT</span>
                 <span class="mx-2">•</span>
                 <span>5 MIN READ</span> <!-- Adjusted read time -->
             </div>
@@ -247,8 +247,10 @@
                 Oleh <span class="font-semibold">Tim Misteri CNN Indonesia</span>
             </p>
 
-            <!-- Video/Image Placeholder -->
-            <figure class="relative w-full h-0 pb-[56.25%] bg-gray-300 rounded-lg overflow-hidden mb-8" id="articleImageContainer">
+            <!-- Video/Image Placeholder - Modified to span full width and remove rounded corners -->
+            <!-- Using w-screen and ml-[calc(50%-50vw)] to make it span full viewport width -->
+            <figure class="relative w-screen h-0 pb-[56.25%] bg-gray-300 overflow-hidden mb-8
+                           ml-[calc(50%-50vw)]" id="articleImageContainer">
                 <!-- Placeholder for video/image content -->
                 <img id="image2" src="image2.jpg" alt="Potret keluarga vintage 2" class="absolute inset-0 w-full h-full object-cover" style="object-position: top;">
                 <img id="image1" src="image1.jpg" alt="Potret keluarga vintage 1" class="absolute inset-0 w-full h-full object-cover" style="object-position: top;">
@@ -257,7 +259,7 @@
                 </figcaption>
             </figure>
 
-            <div class="article-content text-lg leading-relaxed mb-4 border-t border-gray-200 pt-6" id="articleContent">
+            <div class="article-content text-lg leading-relaxed mb-4" id="articleContent">
                 <!-- Konten placeholder akan diisi oleh JavaScript -->
             </div>
         </article>
